tests/compile_fail/derive_payload_metric_missing_name.stderr
error: metric attribute is missing `name = "..."`
 --> tests/compile_fail/derive_payload_metric_missing_name.rs:9:1
  |
9 | #[metric(polarity = HigherBetter)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
